Fix sizes for list on smaller screens (#834)

--- a/src/business/List/List.pcss
+++ b/src/business/List/List.pcss
@@ -212,12 +212,14 @@
 }
 
 @media (max-width: 480px) {
-  .telia-listItem {
+  .telia-listItem__mainWrapper {
     padding: 1rem 1.25rem;
+  }
 
+  .telia-listItem {
     &__name {
       line-height: 1rem;
-      font-size: 1.125rem;
+      font-size: 1rem;
       font-weight: 400;
     }
 
